# autocon-ws-b1

./: .gitignore  Dockerfile.workshop  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-build-publish.yml
net_agents/: README.md  pyproject.toml  requirements.txt
net_agents/examples/: basic_usage.py  capacity_monitoring.py  routing_workflow.py  service_lifecycle.py
net_agents/workshop/: .env.example  .gitignore  config.py  ex0_verify_setup.py  ex1_support_agent.py  ex1_test_support_agent.py  ex2_planning_agent.py  ex3_provisioning_agent.py  requirements.txt
net_agents/workshop/docs/: EXERCISE_GUIDE.md  NETWORK_REFERENCE.md  README.md  SETUP.md
net_agents/workshop/network_simulator_client/: __init__.py  client.py  exceptions.py  models.py  utils.py
net_agents/workshop/solutions/: ex2_planning_agent.py  ex3_provisioning_agent.py
net_agents/workshop/templates/: planning_agent_starter.py  provisioning_agent_starter.py
network_simulator/: .dockerignore  API_GUIDE.md  DATABASE.md  Dockerfile  README.md  config.json  docker-compose.yml  requirements.txt  run_api.py
network_simulator/data/: network.db  network.db-shm  network.db-wal  network_elements.csv
network_simulator/migrations/: 001_initial_schema.sql  export_to_json.py
network_simulator/scripts/: clear_services.py  demo_database_queries.py  test_database.py  verify_database.py
network_simulator/src/: container_init.py  main.py
network_simulator/src/api/: __init__.py  api.py  api_models.py
network_simulator/src/core/: __init__.py  config_loader.py  connection_builder.py  network_element.py  network_simulator.py
network_simulator/src/database/: __init__.py  database_manager.py  (+3 more)
network_simulator/tests/: test_api.py
(+10 files in other folders)
